included www to show categories issue

--- a/Africa/SouthAfrica.qmd
+++ b/Africa/SouthAfrica.qmd
@@ -1,4 +1,4 @@
 ---
 title: "{{< meta ctry_title.SouthAfrica >}}"
-order: {{< meta ctry_order.SouthAfrica >}}
+# order: {{< meta ctry_order.SouthAfrica >}}
 ---
